# machine-learning-algorithms-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  california_housing.csv  compose.yaml  csv.h  dataset.cpp  dataset.h  iris.csv  main.cpp  metrics.cpp  metrics.h  optimizer.cpp  optimizer.h  readme.md  regression.cpp  regression.h  type.h
src/: main.cpp
src/lib/dataset/: type.h
src/lib/optimizer/: optimizer.cpp
src/lib/regression/: regression.cpp  regression.h
